--- a/style/style.css
+++ b/style/style.css
@@ -14,6 +14,10 @@ html {
    color: #494C6B;
 }
 
+[data-theme="darkTheme"] {
+   color: #C8CBE7;
+}
+
 body {
    font-size: 1.8rem;
 }
@@ -26,13 +30,16 @@ img {
 
 .btn {
    cursor: pointer;
-   background-color: white;
+   background-color: transparent;
    border: none;
    color: #9495a5;
    font-size: 1.4rem;
    line-height: 1.4rem;
    font-family: inherit;
 }
+
+
+
 
 .btn--bold {
    font-weight: bold;
@@ -44,6 +51,11 @@ img {
 
 .btn:hover {
    color: #494C6B;
+   /* color: #494C6B; */
+}
+
+[data-theme="darkTheme"] .btn:hover {
+   color: #E3E4F1;
 }
 
 p.btn {
@@ -53,6 +65,8 @@ p.btn {
 p.btn:hover {
    color: inherit;
 }
+
+
 
 .main__container {
    width: 100vw;
@@ -66,6 +80,13 @@ p.btn:hover {
    flex-direction: column;
    align-items: center;
    position: relative;
+}
+
+[data-theme="darkTheme"] .main__container {
+   background: url("../img/bg-desktop-dark.jpg");
+   background-color: #171823;
+   background-repeat: no-repeat;
+   background-size: contain;
 }
 
 .todo {
@@ -88,7 +109,7 @@ p.btn:hover {
    letter-spacing: 15px;
 }
 
-.btn__toggle {
+.btn--theme {
    background-color: transparent;
    border:none;
 }
@@ -104,11 +125,21 @@ p.btn:hover {
    margin-bottom: 2.4rem;
 }
 
+[data-theme="darkTheme"] .todo__header {
+ background-color: #25273D;
+}
+
 .todo__circle, .todo__check {
    width:24px;
    height: 24px;
    border: 1px solid #e3e4f1;
    border-radius: 50%;
+   background: transparent;
+}
+
+
+[data-theme="darkTheme"] .todo__circle, [data-theme="darkTheme"] .todo__check {
+   border: 1px solid #393A4B;
 }
 
 .todo__input, todo__input::-webkit-input-placeholder {
@@ -117,7 +148,12 @@ p.btn:hover {
    font-family: inherit;
    line-height: 2rem;
    flex: 1 0;
-   margin-left: 2rem;;
+   margin-left: 2rem;
+   background: transparent;
+}
+
+[data-theme="darkTheme"] .todo__input {
+   color: inherit;
 }
 
 .todo__input:focus {
@@ -134,6 +170,18 @@ p.btn:hover {
    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
 }
 
+.todo__list:first-child {
+   overflow: hidden;
+}
+
+[data-theme="darkTheme"] .todo__list {
+   border-top: 1px solid  #393A4B;
+   border-left: 1px solid #393A4B;
+   border-right: 1px solid #393A4B;
+   border-top-left-radius: 5px;
+   border-top-right-radius: 5px;
+}
+
 .todo__elem {
    width: 100%;
    display: flex;
@@ -141,10 +189,17 @@ p.btn:hover {
    background-color: white;
    border-bottom: 1px solid  #e3e4f1;
    padding: 2rem 2.4rem;
-
-   
 }
 
+
+[data-theme="darkTheme"] .todo__elem {
+   border-bottom: 1px solid #393A4B;
+}
+
+
+[data-theme="darkTheme"] .todo__elem {
+   background-color: #25273D;
+  }
 
 .todo__elem p {
    flex: 1;
@@ -160,6 +215,10 @@ p.btn:hover {
    text-decoration: line-through;
 }
 
+[data-theme="darkTheme"] .todo__elem--checked p {
+   color: #4D5067;
+}
+
 .todo__check {
    display: flex;
    align-items: center;
@@ -169,29 +228,39 @@ p.btn:hover {
 
 }
 
-.todo__elem--checked .todo__check {
-    background: linear-gradient(to right, #55DDFF, #C058F3); 
+[data-theme="darkTheme"] .todo__check  img{
+   transform: scale(0);
+   transition: transform .5s ease-in-out;
 }
+
+.todo__elem--checked .todo__check {
+    background: linear-gradient(to right, #55DDFF, #C058F3);     
+}
+
+ [data-theme="darkTheme"] .todo__elem--checked .todo__check  img{
+   transform: scale(1);
+
+} 
 
 .todo__elem:hover > .todo__check {
     /* background: linear-gradient(to right, #55DDFF, #C058F3);  */
     border: 1px solid #C058F3;
 }
 
-
-
 .todo__delete {
-   background: white;
+   background: transparent;
    border: none;
   transform: scale(0); 
    transition: transform .5s ease-in-out;
 
 }
-
-.todo__elem:hover > .todo__delete {
-  transform: scale(1);
-
+[data-theme="darkTheme"] .todo__delete {
+color: #979797;
 }
+
+ .todo__elem:hover > .todo__delete {
+  transform: scale(1);
+} 
 
 
 
@@ -212,6 +281,13 @@ p.btn:hover {
    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);   
 
 }
+[data-theme="darkTheme"] .todo__filters__sides {
+   background: #25273D;
+   border-bottom: 1px solid #393A4B;
+   border-left: 1px solid  #393A4B;
+   border-right: 1px solid  #393A4B;
+
+}
 
 .todo__filters__center {
    background: white;
@@ -224,7 +300,14 @@ p.btn:hover {
    transform: translate(-50%, -100%);
 }
 
+[data-theme="darkTheme"] .todo__filters__center {
+   background: #25273D;
+   border-bottom: 1px solid #393A4B;
+
+}
+
 .todo__filters__center label {
+   background: transparent;
    margin: 0 0.8rem;
 }
 
@@ -245,4 +328,9 @@ footer {
    padding: 1rem 0;
    display: flex;
    justify-content: center;
+}
+
+[data-theme="darkTheme"] footer a {
+   color: inherit;
+   font-weight: bold;
 }
